<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageView
                android:id="@+id/imgphoto"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"/>
            
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/tv_lang_title"
            android:textSize="40sp"
            android:textStyle="bold"
            android:paddingLeft="15dp"
            android:textColor="@android:color/black"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#838383"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/informasi_detail"
            android:layout_marginTop="12sp"
            android:paddingLeft="10dp"/>


        <TextView
            android:id="@+id/detail_halaman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:text="@string/detail"
            android:paddingTop="2dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#838383"
            android:layout_marginTop="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apakah_ini_membantumu"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginTop="7dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:id="@+id/btn_yes"
            android:textStyle="bold" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/tidak"
            android:id="@+id/btn_no"
            android:textStyle="bold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#838383"
            android:layout_marginTop="7dp"/>


    </LinearLayout>
</ScrollView>